# van-gogh

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clang-cxx-dev-tools.cmake
dependencies/include/glad/: glad.h
source/: glad.cpp  main.cpp
